# LabsPY

./: .coverage  README.md  cosmetic.py  cosmeticTools.py  gender.py  items.py  main.py  pyproject.toml  test.py
Cosmetic/: SkinType.py  hairCare.py  makeup.py  skinCare.py  types.py
CosmeticManeger/: cosmeticManeger.py  sortOrder.py
CosmeticTools/: hairCuttingTools.py  makeupBrushes.py
