[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Bohdan Shcherb <73034554+bohdanshcherba@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
